k8/golang_server.yaml
#
# @autor: Erk Software
# @copyright: 2025
# @license: GPL-3.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-go-server
  labels:
    app: go-server
spec:
  restartPolicy: Always 
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
        - name: container-server
          image: erksoftware/server:1.0
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go-server
  ports:
      - protocol: TCP
        port: 80
        targetPort: 4000
  type: NodePort
