k8/ingress.yaml
#
# @autor: Erk Software
# @copyright: 2025
# @license: GPL-3.0
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-service
            port:
              number: 80
